--- a/content/2017-06-05.md
+++ b/content/2017-06-05.md
@@ -2,6 +2,9 @@
     "date": "2017-06-05",
     "title": "Report for Monday 5th of June 2017",
     "slug": "2017\/06\/05",
+    "categories": [
+        "Daily report"
+    ],
     "health": {
         "weight": 89.5,
         "height": 173,
