--- a/content/2017-06-08.md
+++ b/content/2017-06-08.md
@@ -2,6 +2,9 @@
     "date": "2017-06-08",
     "title": "Report for Thursday 8th of June 2017",
     "slug": "2017\/06\/08",
+    "categories": [
+        "Daily report"
+    ],
     "health": {
         "weight": 0,
         "height": 173,
