--- a/content/2017-06-12.md
+++ b/content/2017-06-12.md
@@ -2,6 +2,9 @@
     "date": "2017-06-12",
     "title": "Report for Monday 12th of June 2017",
     "slug": "2017\/06\/12",
+    "categories": [
+        "Daily report"
+    ],
     "health": {
         "weight": 86.1,
         "height": 173,
