--- a/content/2017-06-15.md
+++ b/content/2017-06-15.md
@@ -2,6 +2,9 @@
     "date": "2017-06-15",
     "title": "Report for Thursday 15th of June 2017",
     "slug": "2017\/06\/15",
+    "categories": [
+        "Daily report"
+    ],
     "health": {
         "weight": 86.1,
         "height": 173,
