--- a/content/2017-06-16.md
+++ b/content/2017-06-16.md
@@ -2,6 +2,9 @@
     "date": "2017-06-16",
     "title": "Report for Friday 16th of June 2017",
     "slug": "2017\/06\/16",
+    "categories": [
+        "Daily report"
+    ],
     "health": {
         "weight": 86,
         "height": 173,
