--- a/content/2017-06-21.md
+++ b/content/2017-06-21.md
@@ -2,6 +2,9 @@
     "date": "2017-06-21",
     "title": "Report for Wednesday 21st of June 2017",
     "slug": "2017\/06\/21",
+    "categories": [
+        "Daily report"
+    ],
     "health": {
         "weight": 86.7,
         "height": 173,
