--- a/content/2017-06-22.md
+++ b/content/2017-06-22.md
@@ -2,6 +2,9 @@
     "date": "2017-06-22",
     "title": "Report for Thursday 22nd of June 2017",
     "slug": "2017\/06\/22",
+    "categories": [
+        "Daily report"
+    ],
     "health": {
         "weight": 86.1,
         "height": 173,
