--- a/content/2017-06-23.md
+++ b/content/2017-06-23.md
@@ -2,6 +2,9 @@
     "date": "2017-06-23",
     "title": "Report for Friday 23rd of June 2017",
     "slug": "2017\/06\/23",
+    "categories": [
+        "Daily report"
+    ],
     "health": {
         "weight": 85.6,
         "height": 173,
