--- a/content/2017-06-25.md
+++ b/content/2017-06-25.md
@@ -2,6 +2,9 @@
     "date": "2017-06-25",
     "title": "Report for Sunday 25th of June 2017",
     "slug": "2017\/06\/25",
+    "categories": [
+        "Daily report"
+    ],
     "health": {
         "weight": 86.2,
         "height": 173,
