--- a/content/2017-06-26.md
+++ b/content/2017-06-26.md
@@ -2,6 +2,9 @@
     "date": "2017-06-26",
     "title": "Report for Monday 26th of June 2017",
     "slug": "2017\/06\/26",
+    "categories": [
+        "Daily report"
+    ],
     "health": {
         "weight": 86,
         "height": 173,
