--- a/content/2017-06-30.md
+++ b/content/2017-06-30.md
@@ -2,6 +2,9 @@
     "date": "2017-06-30",
     "title": "Report for Friday 30th of June 2017",
     "slug": "2017\/06\/30",
+    "categories": [
+        "Daily report"
+    ],
     "health": {
         "weight": 85.2,
         "height": 173,
