--- a/content/2017-07-05.md
+++ b/content/2017-07-05.md
@@ -2,6 +2,9 @@
     "date": "2017-07-05",
     "title": "Report for Wednesday 5th of July 2017",
     "slug": "2017\/07\/05",
+    "categories": [
+        "Daily report"
+    ],
     "health": {
         "weight": 83.9,
         "height": 173,
