--- a/content/2017-07-06.md
+++ b/content/2017-07-06.md
@@ -2,6 +2,9 @@
     "date": "2017-07-06",
     "title": "Report for Thursday 6th of July 2017",
     "slug": "2017\/07\/06",
+    "categories": [
+        "Daily report"
+    ],
     "health": {
         "weight": 83.6,
         "height": 173,
