--- a/content/2017-07-11.md
+++ b/content/2017-07-11.md
@@ -2,6 +2,9 @@
     "date": "2017-07-11",
     "title": "Report for Tuesday 11th of July 2017",
     "slug": "2017\/07\/11",
+    "categories": [
+        "Daily report"
+    ],
     "health": {
         "weight": 83.7,
         "height": 173,
