--- a/content/2017-07-12.md
+++ b/content/2017-07-12.md
@@ -2,6 +2,9 @@
     "date": "2017-07-12",
     "title": "Report for Wednesday 12th of July 2017",
     "slug": "2017\/07\/12",
+    "categories": [
+        "Daily report"
+    ],
     "health": {
         "weight": 83.6,
         "height": 173,
