--- a/content/2017-07-16.md
+++ b/content/2017-07-16.md
@@ -2,6 +2,9 @@
     "date": "2017-07-16",
     "title": "Report for Sunday 16th of July 2017",
     "slug": "2017\/07\/16",
+    "categories": [
+        "Daily report"
+    ],
     "health": {
         "weight": 82.9,
         "height": 173,
