--- a/content/2017-07-19.md
+++ b/content/2017-07-19.md
@@ -2,6 +2,9 @@
     "date": "2017-07-19",
     "title": "Report for Wednesday 19th of July 2017",
     "slug": "2017\/07\/19",
+    "categories": [
+        "Daily report"
+    ],
     "health": {
         "weight": 82.6,
         "height": 173,
