--- a/content/2017-07-20.md
+++ b/content/2017-07-20.md
@@ -2,6 +2,9 @@
     "date": "2017-07-20",
     "title": "Report for Thursday 20th of July 2017",
     "slug": "2017\/07\/20",
+    "categories": [
+        "Daily report"
+    ],
     "health": {
         "weight": 82.2,
         "height": 173,
