--- a/content/2017-07-22.md
+++ b/content/2017-07-22.md
@@ -2,6 +2,9 @@
     "date": "2017-07-22",
     "title": "Report for Saturday 22nd of July 2017",
     "slug": "2017\/07\/22",
+    "categories": [
+        "Daily report"
+    ],
     "health": {
         "weight": 81.9,
         "height": 173,
