--- a/content/2017-06-01.md
+++ b/content/2017-06-01.md
@@ -2,6 +2,9 @@
     "date": "2017-06-01",
     "title": "Report for Thursday 1st of June 2017",
     "slug": "2017\/06\/01",
+    "categories": [
+        "Daily report"
+    ],
     "health": {
         "weight": 0,
         "height": 173,
