--- a/content/2017-06-02.md
+++ b/content/2017-06-02.md
@@ -2,6 +2,9 @@
     "date": "2017-06-02",
     "title": "Report for Friday 2nd of June 2017",
     "slug": "2017\/06\/02",
+    "categories": [
+        "Daily report"
+    ],
     "health": {
         "weight": 0,
         "height": 173,
