--- a/content/2017-06-03.md
+++ b/content/2017-06-03.md
@@ -2,6 +2,9 @@
     "date": "2017-06-03",
     "title": "Report for Saturday 3rd of June 2017",
     "slug": "2017\/06\/03",
+    "categories": [
+        "Daily report"
+    ],
     "health": {
         "weight": 0,
         "height": 173,
