--- a/content/2017-06-04.md
+++ b/content/2017-06-04.md
@@ -2,6 +2,9 @@
     "date": "2017-06-04",
     "title": "Report for Sunday 4th of June 2017",
     "slug": "2017\/06\/04",
+    "categories": [
+        "Daily report"
+    ],
     "health": {
         "weight": 0,
         "height": 173,
