--- a/content/2017-06-06.md
+++ b/content/2017-06-06.md
@@ -2,6 +2,9 @@
     "date": "2017-06-06",
     "title": "Report for Tuesday 6th of June 2017",
     "slug": "2017\/06\/06",
+    "categories": [
+        "Daily report"
+    ],
     "health": {
         "weight": 89.5,
         "height": 173,
