--- a/content/2017-06-07.md
+++ b/content/2017-06-07.md
@@ -2,6 +2,9 @@
     "date": "2017-06-07",
     "title": "Report for Wednesday 7th of June 2017",
     "slug": "2017\/06\/07",
+    "categories": [
+        "Daily report"
+    ],
     "health": {
         "weight": 0,
         "height": 173,
