--- a/content/2017-06-09.md
+++ b/content/2017-06-09.md
@@ -2,6 +2,9 @@
     "date": "2017-06-09",
     "title": "Report for Friday 9th of June 2017",
     "slug": "2017\/06\/09",
+    "categories": [
+        "Daily report"
+    ],
     "health": {
         "weight": 0,
         "height": 173,
