--- a/content/2017-06-10.md
+++ b/content/2017-06-10.md
@@ -2,6 +2,9 @@
     "date": "2017-06-10",
     "title": "Report for Saturday 10th of June 2017",
     "slug": "2017\/06\/10",
+    "categories": [
+        "Daily report"
+    ],
     "health": {
         "weight": 0,
         "height": 173,
