--- a/content/2017-06-11.md
+++ b/content/2017-06-11.md
@@ -2,6 +2,9 @@
     "date": "2017-06-11",
     "title": "Report for Sunday 11th of June 2017",
     "slug": "2017\/06\/11",
+    "categories": [
+        "Daily report"
+    ],
     "health": {
         "weight": 85.6,
         "height": 173,
