--- a/content/2017-06-13.md
+++ b/content/2017-06-13.md
@@ -2,6 +2,9 @@
     "date": "2017-06-13",
     "title": "Report for Tuesday 13th of June 2017",
     "slug": "2017\/06\/13",
+    "categories": [
+        "Daily report"
+    ],
     "health": {
         "weight": 86.3,
         "height": 173,
