--- a/content/2017-06-14.md
+++ b/content/2017-06-14.md
@@ -2,6 +2,9 @@
     "date": "2017-06-14",
     "title": "Report for Wednesday 14th of June 2017",
     "slug": "2017\/06\/14",
+    "categories": [
+        "Daily report"
+    ],
     "health": {
         "weight": 86.5,
         "height": 173,
