--- a/content/2017-06-17.md
+++ b/content/2017-06-17.md
@@ -2,6 +2,9 @@
     "date": "2017-06-17",
     "title": "Report for Saturday 17th of June 2017",
     "slug": "2017\/06\/17",
+    "categories": [
+        "Daily report"
+    ],
     "health": {
         "weight": 86,
         "height": 173,
