--- a/content/2017-06-19.md
+++ b/content/2017-06-19.md
@@ -2,6 +2,9 @@
     "date": "2017-06-19",
     "title": "Report for Monday 19th of June 2017",
     "slug": "2017\/06\/19",
+    "categories": [
+        "Daily report"
+    ],
     "health": {
         "weight": 86.3,
         "height": 173,
