--- a/content/2017-06-20.md
+++ b/content/2017-06-20.md
@@ -2,6 +2,9 @@
     "date": "2017-06-20",
     "title": "Report for Tuesday 20th of June 2017",
     "slug": "2017\/06\/20",
+    "categories": [
+        "Daily report"
+    ],
     "health": {
         "weight": 86.1,
         "height": 173,
