--- a/content/2017-06-24.md
+++ b/content/2017-06-24.md
@@ -2,6 +2,9 @@
     "date": "2017-06-24",
     "title": "Report for Saturday 24th of June 2017",
     "slug": "2017\/06\/24",
+    "categories": [
+        "Daily report"
+    ],
     "health": {
         "weight": 85.9,
         "height": 173,
