--- a/content/2017-06-28.md
+++ b/content/2017-06-28.md
@@ -2,6 +2,9 @@
     "date": "2017-06-28",
     "title": "Report for Wednesday 28th of June 2017",
     "slug": "2017\/06\/28",
+    "categories": [
+        "Daily report"
+    ],
     "health": {
         "weight": 85.7,
         "height": 173,
