--- a/content/2017-06-29.md
+++ b/content/2017-06-29.md
@@ -2,6 +2,9 @@
     "date": "2017-06-29",
     "title": "Report for Thursday 29th of June 2017",
     "slug": "2017\/06\/29",
+    "categories": [
+        "Daily report"
+    ],
     "health": {
         "weight": 0,
         "height": 173,
