--- a/content/2017-07-01.md
+++ b/content/2017-07-01.md
@@ -2,6 +2,9 @@
     "date": "2017-07-01",
     "title": "Report for Saturday 1st of July 2017",
     "slug": "2017\/07\/01",
+    "categories": [
+        "Daily report"
+    ],
     "health": {
         "weight": 84.5,
         "height": 173,
