--- a/content/2017-07-02.md
+++ b/content/2017-07-02.md
@@ -2,6 +2,9 @@
     "date": "2017-07-02",
     "title": "Report for Sunday 2nd of July 2017",
     "slug": "2017\/07\/02",
+    "categories": [
+        "Daily report"
+    ],
     "health": {
         "weight": 83.9,
         "height": 173,
