--- a/content/2017-07-03.md
+++ b/content/2017-07-03.md
@@ -2,6 +2,9 @@
     "date": "2017-07-03",
     "title": "Report for Monday 3rd of July 2017",
     "slug": "2017\/07\/03",
+    "categories": [
+        "Daily report"
+    ],
     "health": {
         "weight": 84,
         "height": 173,
