--- a/content/2017-07-04.md
+++ b/content/2017-07-04.md
@@ -2,6 +2,9 @@
     "date": "2017-07-04",
     "title": "Report for Tuesday 4th of July 2017",
     "slug": "2017\/07\/04",
+    "categories": [
+        "Daily report"
+    ],
     "health": {
         "weight": 83.8,
         "height": 173,
