--- a/content/2017-07-07.md
+++ b/content/2017-07-07.md
@@ -2,6 +2,9 @@
     "date": "2017-07-07",
     "title": "Report for Friday 7th of July 2017",
     "slug": "2017\/07\/07",
+    "categories": [
+        "Daily report"
+    ],
     "health": {
         "weight": 83.6,
         "height": 173,
