--- a/content/2017-07-08.md
+++ b/content/2017-07-08.md
@@ -2,6 +2,9 @@
     "date": "2017-07-08",
     "title": "Report for Saturday 8th of July 2017",
     "slug": "2017\/07\/08",
+    "categories": [
+        "Daily report"
+    ],
     "health": {
         "weight": 83.1,
         "height": 173,
