--- a/content/2017-07-09.md
+++ b/content/2017-07-09.md
@@ -2,6 +2,9 @@
     "date": "2017-07-09",
     "title": "Report for Sunday 9th of July 2017",
     "slug": "2017\/07\/09",
+    "categories": [
+        "Daily report"
+    ],
     "health": {
         "weight": 83.6,
         "height": 173,
