--- a/content/2017-07-10.md
+++ b/content/2017-07-10.md
@@ -2,6 +2,9 @@
     "date": "2017-07-10",
     "title": "Report for Monday 10th of July 2017",
     "slug": "2017\/07\/10",
+    "categories": [
+        "Daily report"
+    ],
     "health": {
         "weight": 83.8,
         "height": 173,
