--- a/content/2017-07-13.md
+++ b/content/2017-07-13.md
@@ -2,6 +2,9 @@
     "date": "2017-07-13",
     "title": "Report for Thursday 13th of July 2017",
     "slug": "2017\/07\/13",
+    "categories": [
+        "Daily report"
+    ],
     "health": {
         "weight": 83.3,
         "height": 173,
