--- a/content/2017-07-14.md
+++ b/content/2017-07-14.md
@@ -2,6 +2,9 @@
     "date": "2017-07-14",
     "title": "Report for Friday 14th of July 2017",
     "slug": "2017\/07\/14",
+    "categories": [
+        "Daily report"
+    ],
     "health": {
         "weight": 83.2,
         "height": 173,
