--- a/content/2017-07-15.md
+++ b/content/2017-07-15.md
@@ -2,6 +2,9 @@
     "date": "2017-07-15",
     "title": "Report for Saturday 15th of July 2017",
     "slug": "2017\/07\/15",
+    "categories": [
+        "Daily report"
+    ],
     "health": {
         "weight": 83.2,
         "height": 173,
