--- a/content/2017-07-17.md
+++ b/content/2017-07-17.md
@@ -2,6 +2,9 @@
     "date": "2017-07-17",
     "title": "Report for Monday 17th of July 2017",
     "slug": "2017\/07\/17",
+    "categories": [
+        "Daily report"
+    ],
     "health": {
         "weight": 82.9,
         "height": 173,
