--- a/content/2017-07-18.md
+++ b/content/2017-07-18.md
@@ -2,6 +2,9 @@
     "date": "2017-07-18",
     "title": "Report for Tuesday 18th of July 2017",
     "slug": "2017\/07\/18",
+    "categories": [
+        "Daily report"
+    ],
     "health": {
         "weight": 83.2,
         "height": 173,
