--- a/content/2017-07-21.md
+++ b/content/2017-07-21.md
@@ -2,6 +2,9 @@
     "date": "2017-07-21",
     "title": "Report for Friday 21st of July 2017",
     "slug": "2017\/07\/21",
+    "categories": [
+        "Daily report"
+    ],
     "health": {
         "weight": 82.1,
         "height": 173,
