--- a/content/2017-06-01.md
+++ b/content/2017-06-01.md
@@ -1,5 +1,6 @@
 {
     "date": "2017-06-01",
+    "type": "post",
     "title": "Report for Thursday 1st of June 2017",
     "slug": "2017\/06\/01",
     "categories": [
