--- a/content/2017-06-03.md
+++ b/content/2017-06-03.md
@@ -1,5 +1,6 @@
 {
     "date": "2017-06-03",
+    "type": "post",
     "title": "Report for Saturday 3rd of June 2017",
     "slug": "2017\/06\/03",
     "categories": [
