--- a/content/2017-06-05.md
+++ b/content/2017-06-05.md
@@ -1,5 +1,6 @@
 {
     "date": "2017-06-05",
+    "type": "post",
     "title": "Report for Monday 5th of June 2017",
     "slug": "2017\/06\/05",
     "categories": [
