--- a/content/2017-06-06.md
+++ b/content/2017-06-06.md
@@ -1,5 +1,6 @@
 {
     "date": "2017-06-06",
+    "type": "post",
     "title": "Report for Tuesday 6th of June 2017",
     "slug": "2017\/06\/06",
     "categories": [
