--- a/content/2017-06-08.md
+++ b/content/2017-06-08.md
@@ -1,5 +1,6 @@
 {
     "date": "2017-06-08",
+    "type": "post",
     "title": "Report for Thursday 8th of June 2017",
     "slug": "2017\/06\/08",
     "categories": [
