--- a/content/2017-06-11.md
+++ b/content/2017-06-11.md
@@ -1,5 +1,6 @@
 {
     "date": "2017-06-11",
+    "type": "post",
     "title": "Report for Sunday 11th of June 2017",
     "slug": "2017\/06\/11",
     "categories": [
