--- a/content/2017-06-12.md
+++ b/content/2017-06-12.md
@@ -1,5 +1,6 @@
 {
     "date": "2017-06-12",
+    "type": "post",
     "title": "Report for Monday 12th of June 2017",
     "slug": "2017\/06\/12",
     "categories": [
