--- a/content/2017-06-14.md
+++ b/content/2017-06-14.md
@@ -1,5 +1,6 @@
 {
     "date": "2017-06-14",
+    "type": "post",
     "title": "Report for Wednesday 14th of June 2017",
     "slug": "2017\/06\/14",
     "categories": [
