--- a/content/2017-06-16.md
+++ b/content/2017-06-16.md
@@ -1,5 +1,6 @@
 {
     "date": "2017-06-16",
+    "type": "post",
     "title": "Report for Friday 16th of June 2017",
     "slug": "2017\/06\/16",
     "categories": [
