--- a/content/2017-06-17.md
+++ b/content/2017-06-17.md
@@ -1,5 +1,6 @@
 {
     "date": "2017-06-17",
+    "type": "post",
     "title": "Report for Saturday 17th of June 2017",
     "slug": "2017\/06\/17",
     "categories": [
