--- a/content/2017-06-18.md
+++ b/content/2017-06-18.md
@@ -1,5 +1,6 @@
 {
     "date": "2017-06-18",
+    "type": "post",
     "title": "Report for Sunday 18th of June 2017",
     "slug": "2017\/06\/18",
     "categories": [
