--- a/content/2017-06-19.md
+++ b/content/2017-06-19.md
@@ -1,5 +1,6 @@
 {
     "date": "2017-06-19",
+    "type": "post",
     "title": "Report for Monday 19th of June 2017",
     "slug": "2017\/06\/19",
     "categories": [
