--- a/content/2017-06-20.md
+++ b/content/2017-06-20.md
@@ -1,5 +1,6 @@
 {
     "date": "2017-06-20",
+    "type": "post",
     "title": "Report for Tuesday 20th of June 2017",
     "slug": "2017\/06\/20",
     "categories": [
