--- a/content/2017-06-21.md
+++ b/content/2017-06-21.md
@@ -1,5 +1,6 @@
 {
     "date": "2017-06-21",
+    "type": "post",
     "title": "Report for Wednesday 21st of June 2017",
     "slug": "2017\/06\/21",
     "categories": [
