--- a/content/2017-06-22.md
+++ b/content/2017-06-22.md
@@ -1,5 +1,6 @@
 {
     "date": "2017-06-22",
+    "type": "post",
     "title": "Report for Thursday 22nd of June 2017",
     "slug": "2017\/06\/22",
     "categories": [
