--- a/content/2017-06-23.md
+++ b/content/2017-06-23.md
@@ -1,5 +1,6 @@
 {
     "date": "2017-06-23",
+    "type": "post",
     "title": "Report for Friday 23rd of June 2017",
     "slug": "2017\/06\/23",
     "categories": [
