--- a/content/2017-06-25.md
+++ b/content/2017-06-25.md
@@ -1,5 +1,6 @@
 {
     "date": "2017-06-25",
+    "type": "post",
     "title": "Report for Sunday 25th of June 2017",
     "slug": "2017\/06\/25",
     "categories": [
