--- a/content/2017-06-26.md
+++ b/content/2017-06-26.md
@@ -1,5 +1,6 @@
 {
     "date": "2017-06-26",
+    "type": "post",
     "title": "Report for Monday 26th of June 2017",
     "slug": "2017\/06\/26",
     "categories": [
