--- a/content/2017-06-28.md
+++ b/content/2017-06-28.md
@@ -1,5 +1,6 @@
 {
     "date": "2017-06-28",
+    "type": "post",
     "title": "Report for Wednesday 28th of June 2017",
     "slug": "2017\/06\/28",
     "categories": [
