--- a/content/2017-06-29.md
+++ b/content/2017-06-29.md
@@ -1,5 +1,6 @@
 {
     "date": "2017-06-29",
+    "type": "post",
     "title": "Report for Thursday 29th of June 2017",
     "slug": "2017\/06\/29",
     "categories": [
