--- a/content/2017-06-30.md
+++ b/content/2017-06-30.md
@@ -1,5 +1,6 @@
 {
     "date": "2017-06-30",
+    "type": "post",
     "title": "Report for Friday 30th of June 2017",
     "slug": "2017\/06\/30",
     "categories": [
