--- a/content/2017-07-01.md
+++ b/content/2017-07-01.md
@@ -1,5 +1,6 @@
 {
     "date": "2017-07-01",
+    "type": "post",
     "title": "Report for Saturday 1st of July 2017",
     "slug": "2017\/07\/01",
     "categories": [
