--- a/content/2017-07-04.md
+++ b/content/2017-07-04.md
@@ -1,5 +1,6 @@
 {
     "date": "2017-07-04",
+    "type": "post",
     "title": "Report for Tuesday 4th of July 2017",
     "slug": "2017\/07\/04",
     "categories": [
