--- a/content/2017-07-06.md
+++ b/content/2017-07-06.md
@@ -1,5 +1,6 @@
 {
     "date": "2017-07-06",
+    "type": "post",
     "title": "Report for Thursday 6th of July 2017",
     "slug": "2017\/07\/06",
     "categories": [
