--- a/content/2017-07-10.md
+++ b/content/2017-07-10.md
@@ -1,5 +1,6 @@
 {
     "date": "2017-07-10",
+    "type": "post",
     "title": "Report for Monday 10th of July 2017",
     "slug": "2017\/07\/10",
     "categories": [
