--- a/content/2017-07-12.md
+++ b/content/2017-07-12.md
@@ -1,5 +1,6 @@
 {
     "date": "2017-07-12",
+    "type": "post",
     "title": "Report for Wednesday 12th of July 2017",
     "slug": "2017\/07\/12",
     "categories": [
