--- a/content/2017-07-16.md
+++ b/content/2017-07-16.md
@@ -1,5 +1,6 @@
 {
     "date": "2017-07-16",
+    "type": "post",
     "title": "Report for Sunday 16th of July 2017",
     "slug": "2017\/07\/16",
     "categories": [
