--- a/content/2017-07-20.md
+++ b/content/2017-07-20.md
@@ -1,5 +1,6 @@
 {
     "date": "2017-07-20",
+    "type": "post",
     "title": "Report for Thursday 20th of July 2017",
     "slug": "2017\/07\/20",
     "categories": [
