--- a/content/2017-07-21.md
+++ b/content/2017-07-21.md
@@ -1,5 +1,6 @@
 {
     "date": "2017-07-21",
+    "type": "post",
     "title": "Report for Friday 21st of July 2017",
     "slug": "2017\/07\/21",
     "categories": [
