--- a/content/2017-07-22.md
+++ b/content/2017-07-22.md
@@ -1,5 +1,6 @@
 {
     "date": "2017-07-22",
+    "type": "post",
     "title": "Report for Saturday 22nd of July 2017",
     "slug": "2017\/07\/22",
     "categories": [
@@ -11,10 +12,10 @@
         "age": 13366
     },
     "nutrition": {
-        "calories": 1218.97,
-        "fat": 78.55,
-        "carbohydrates": 13.39,
-        "protein": 38.48
+        "calories": 1508.46,
+        "fat": 104.45,
+        "carbohydrates": 22.63,
+        "protein": 46.45
     },
     "exercise": {
         "pushups": 11,
@@ -24,7 +25,7 @@
 }
 
 After listening to [Homo Deus: A Brief History of
-Tomorrow](http://amzn.to/2ulgPfh) , decided to automate my data reporting even
+Tomorrow](http://amzn.to/2ulgPfh), decided to automate my data reporting even
 more and make most of the data I'm collecting public.
 
 
