--- a/content/2017-06-02.md
+++ b/content/2017-06-02.md
@@ -1,5 +1,6 @@
 {
     "date": "2017-06-02",
+    "type": "post",
     "title": "Report for Friday 2nd of June 2017",
     "slug": "2017\/06\/02",
     "categories": [
