--- a/content/2017-06-04.md
+++ b/content/2017-06-04.md
@@ -1,5 +1,6 @@
 {
     "date": "2017-06-04",
+    "type": "post",
     "title": "Report for Sunday 4th of June 2017",
     "slug": "2017\/06\/04",
     "categories": [
