--- a/content/2017-06-07.md
+++ b/content/2017-06-07.md
@@ -1,5 +1,6 @@
 {
     "date": "2017-06-07",
+    "type": "post",
     "title": "Report for Wednesday 7th of June 2017",
     "slug": "2017\/06\/07",
     "categories": [
