--- a/content/2017-06-09.md
+++ b/content/2017-06-09.md
@@ -1,5 +1,6 @@
 {
     "date": "2017-06-09",
+    "type": "post",
     "title": "Report for Friday 9th of June 2017",
     "slug": "2017\/06\/09",
     "categories": [
