--- a/content/2017-06-10.md
+++ b/content/2017-06-10.md
@@ -1,5 +1,6 @@
 {
     "date": "2017-06-10",
+    "type": "post",
     "title": "Report for Saturday 10th of June 2017",
     "slug": "2017\/06\/10",
     "categories": [
