--- a/content/2017-06-13.md
+++ b/content/2017-06-13.md
@@ -1,5 +1,6 @@
 {
     "date": "2017-06-13",
+    "type": "post",
     "title": "Report for Tuesday 13th of June 2017",
     "slug": "2017\/06\/13",
     "categories": [
