--- a/content/2017-06-24.md
+++ b/content/2017-06-24.md
@@ -1,5 +1,6 @@
 {
     "date": "2017-06-24",
+    "type": "post",
     "title": "Report for Saturday 24th of June 2017",
     "slug": "2017\/06\/24",
     "categories": [
