--- a/content/2017-06-27.md
+++ b/content/2017-06-27.md
@@ -1,5 +1,6 @@
 {
     "date": "2017-06-27",
+    "type": "post",
     "title": "Report for Tuesday 27th of June 2017",
     "slug": "2017\/06\/27",
     "categories": [
