--- a/content/2017-07-02.md
+++ b/content/2017-07-02.md
@@ -1,5 +1,6 @@
 {
     "date": "2017-07-02",
+    "type": "post",
     "title": "Report for Sunday 2nd of July 2017",
     "slug": "2017\/07\/02",
     "categories": [
