--- a/content/2017-07-03.md
+++ b/content/2017-07-03.md
@@ -1,5 +1,6 @@
 {
     "date": "2017-07-03",
+    "type": "post",
     "title": "Report for Monday 3rd of July 2017",
     "slug": "2017\/07\/03",
     "categories": [
