--- a/content/2017-07-05.md
+++ b/content/2017-07-05.md
@@ -1,5 +1,6 @@
 {
     "date": "2017-07-05",
+    "type": "post",
     "title": "Report for Wednesday 5th of July 2017",
     "slug": "2017\/07\/05",
     "categories": [
