--- a/content/2017-07-07.md
+++ b/content/2017-07-07.md
@@ -1,5 +1,6 @@
 {
     "date": "2017-07-07",
+    "type": "post",
     "title": "Report for Friday 7th of July 2017",
     "slug": "2017\/07\/07",
     "categories": [
