--- a/content/2017-07-08.md
+++ b/content/2017-07-08.md
@@ -1,5 +1,6 @@
 {
     "date": "2017-07-08",
+    "type": "post",
     "title": "Report for Saturday 8th of July 2017",
     "slug": "2017\/07\/08",
     "categories": [
