--- a/content/2017-07-09.md
+++ b/content/2017-07-09.md
@@ -1,5 +1,6 @@
 {
     "date": "2017-07-09",
+    "type": "post",
     "title": "Report for Sunday 9th of July 2017",
     "slug": "2017\/07\/09",
     "categories": [
