--- a/content/2017-07-11.md
+++ b/content/2017-07-11.md
@@ -1,5 +1,6 @@
 {
     "date": "2017-07-11",
+    "type": "post",
     "title": "Report for Tuesday 11th of July 2017",
     "slug": "2017\/07\/11",
     "categories": [
