--- a/content/2017-07-13.md
+++ b/content/2017-07-13.md
@@ -1,5 +1,6 @@
 {
     "date": "2017-07-13",
+    "type": "post",
     "title": "Report for Thursday 13th of July 2017",
     "slug": "2017\/07\/13",
     "categories": [
