--- a/content/2017-07-17.md
+++ b/content/2017-07-17.md
@@ -1,5 +1,6 @@
 {
     "date": "2017-07-17",
+    "type": "post",
     "title": "Report for Monday 17th of July 2017",
     "slug": "2017\/07\/17",
     "categories": [
