--- a/content/2017-07-18.md
+++ b/content/2017-07-18.md
@@ -1,5 +1,6 @@
 {
     "date": "2017-07-18",
+    "type": "post",
     "title": "Report for Tuesday 18th of July 2017",
     "slug": "2017\/07\/18",
     "categories": [
