--- a/content/2017-07-19.md
+++ b/content/2017-07-19.md
@@ -1,5 +1,6 @@
 {
     "date": "2017-07-19",
+    "type": "post",
     "title": "Report for Wednesday 19th of July 2017",
     "slug": "2017\/07\/19",
     "categories": [
