--- a/content/post/2017-07-27.md
+++ b/content/post/2017-07-27.md
@@ -25,7 +25,10 @@
     "media": {
         "books": [],
         "podcast": [],
-        "youtube": []
+        "youtube": [],
+        "photos": [
+            "\/photos\/2017-07-27\/20170727_164758.jpg"
+        ]
     }
 }
 
