--- a/content/post/2017-07-28.md
+++ b/content/post/2017-07-28.md
@@ -20,13 +20,14 @@
     "exercise": {
         "pushups": 11,
         "crunches": 15,
-        "steps": 0
+        "steps": 11228
     },
     "media": {
         "books": [],
         "podcast": [],
-        "youtube": []
+        "youtube": [],
+        "photos": []
     }
 }
 
-Today I am <strong>13372 days</strong> old and my weight is <strong>81.9 kg</strong>. During the day, I consumed <strong>1814.57 kcal</strong> coming from <strong>157.93 g</strong> fat, <strong>45.69 g</strong> carbohydrates and <strong>61.73 g</strong> protein. Managed to do <strong>11 push-ups</strong>, <strong>15 crunches</strong> and walked <strong>0 steps</strong> during the day which is approximately <strong>0 km</strong>.
+Today I am <strong>13372 days</strong> old and my weight is <strong>81.9 kg</strong>. During the day, I consumed <strong>1814.57 kcal</strong> coming from <strong>157.93 g</strong> fat, <strong>45.69 g</strong> carbohydrates and <strong>61.73 g</strong> protein. Managed to do <strong>11 push-ups</strong>, <strong>15 crunches</strong> and walked <strong>11228 steps</strong> during the day which is approximately <strong>8.56 km</strong>.
