--- a/content/post/2017-07-24.md
+++ b/content/post/2017-07-24.md
@@ -25,7 +25,8 @@
     "media": {
         "books": [],
         "podcast": [],
-        "youtube": []
+        "youtube": [],
+        "photos": []
     }
 }
 
