--- a/content/post/2017-07-25.md
+++ b/content/post/2017-07-25.md
@@ -35,7 +35,8 @@
             }
         ],
         "podcast": [],
-        "youtube": []
+        "youtube": [],
+        "photos": []
     }
 }
 
